test: add reusable PhysicalTenantsITHelper and fold isolation IT onto it
Add a reusable helper for booting a single broker that serves several physical tenants and for building per-tenant gRPC clients / REST base URLs. Every tenant, including `default`, is declared explicitly with its secondary storage; the builder rejects null/blank ids, null storage, duplicate declarations, and a missing `default` tenant.

Fold the seed PhysicalTenantIsolationIT onto the helper. Relates to #55350; part of epic #50532.