@@ -14,9 +14,10 @@ import static org.awaitility.Awaitility.await;
 import io.camunda.client.CamundaClient;
 import io.camunda.client.api.command.ClientStatusException;
 import io.camunda.client.api.response.ActivateJobsResponse;
-import io.camunda.configuration.SecondaryStorage.SecondaryStorageType;
 import io.camunda.zeebe.model.bpmn.Bpmn;
 import io.camunda.zeebe.model.bpmn.BpmnModelInstance;
+import io.camunda.zeebe.qa.util.cluster.PhysicalTenantsITHelper;
+import io.camunda.zeebe.qa.util.cluster.PhysicalTenantsITHelper.Storage;
 import io.camunda.zeebe.qa.util.cluster.TestStandaloneBroker;
 import io.camunda.zeebe.qa.util.junit.ZeebeIntegration;
 import io.camunda.zeebe.qa.util.junit.ZeebeIntegration.TestZeebe;
@@ -39,27 +40,26 @@ final class PhysicalTenantIsolationIT {
   private static final String TENANT_A = "tenanta";
   private static final String JOB_TYPE = "task";
 
+  // the default tenant and tenant A both run broker-only (no secondary storage, M1 scope);
+  // declaring tenant A starts a second, fully isolated partition group / engine for it
+  private static final PhysicalTenantsITHelper TENANTS =
+      PhysicalTenantsITHelper.builder()
+          .withTenant(PhysicalTenantsITHelper.DEFAULT_TENANT_ID, Storage.none())
+          .withTenant(TENANT_A, Storage.none())
+          .build();
+
   @TestZeebe
   private final TestStandaloneBroker broker =
-      new TestStandaloneBroker()
-          .withUnauthenticatedAccess()
-          // the cluster uses no secondary storage (broker-only) ...
-          .withDataConfig(
-              dataCfg -> dataCfg.getSecondaryStorage().setType(SecondaryStorageType.none))
-          // each explicitly-configured physical tenant must provide its own initialization block
-          .withProperty(
-              "camunda.physical-tenants."
-                  + TENANT_A
-                  + ".security.initialization.default-roles.admin.users[0]",
-              TENANT_A + "-admin");
+      TENANTS.configure(new TestStandaloneBroker().withUnauthenticatedAccess());
 
   @AutoClose private CamundaClient defaultClient;
   @AutoClose private CamundaClient tenantAClient;
 
   @BeforeEach
   void beforeEach() {
-    defaultClient = broker.newClientBuilder().build();
-    tenantAClient = broker.newClientBuilder().physicalTenantId(TENANT_A).build();
+    defaultClient =
+        TENANTS.newClientBuilder(broker, PhysicalTenantsITHelper.DEFAULT_TENANT_ID).build();
+    tenantAClient = TENANTS.newClientBuilder(broker, TENANT_A).build();
   }
 
   @Test
@@ -120,9 +120,8 @@ final class PhysicalTenantIsolationIT {
             .send()
             .join();
     assertThat(tenantAJobs.getJobs()).hasSize(1);
-    assertThat(tenantAJobs.getJobs().getFirst().getProcessInstanceKey())
-        .isEqualTo(processInstanceKey);
-    tenantAClient.newCompleteCommand(tenantAJobs.getJobs().getFirst().getKey()).send().join();
+    assertThat(tenantAJobs.getJobs().get(0).getProcessInstanceKey()).isEqualTo(processInstanceKey);
+    tenantAClient.newCompleteCommand(tenantAJobs.getJobs().get(0).getKey()).send().join();
 
     // and - the process was never deployed to the default tenant
     assertThatThrownBy(
